--- a/src/pug/layouts/main.pug
+++ b/src/pug/layouts/main.pug
@@ -1,6 +1,6 @@
 include ./mixins.pug
 
-block variables
+
 
 <!DOCTYPE html>
 html(lang="en")
@@ -10,8 +10,13 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         link(rel="stylesheet", href="css/main.css")
         link( href="https://fonts.googleapis.com/css?family=Exo+2:900|Montserrat:400,400i,500,700|Playfair+Display&display=swap&subset=cyrillic" rel="stylesheet")
-        title #{title}
+        title Camping
     body
-        block content
+        include ./../sections/header.pug
+        services
+        destinations
+        subscribe
+        footer
+
         
         script(src="js/main.js")
