--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,23 +1,9 @@
 //Libs
-@import "./libs/bootstrap-reboot";
-@import "./libs/bootstrap-grid";
+
 
 
 //Bloks
-@import "./blocks/base";
-@import "./blocks/header";
-@import "./blocks/social-icons";
-@import "./blocks/logo";
-@import "./blocks/buttons";
-@import "./blocks/post";
-@import "./blocks/share-icons";
-@import "./blocks/pagination";
-@import "./blocks/widget";
-@import "./blocks/post-widget";
-@import "./blocks/widget-instagram";
-@import "./blocks/footer";
-@import "./blocks/copyright";
-@import "./blocks/footer-nav";
+@import "./blocks/header"
 
 
 
