add background for header

--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -25,3 +25,6 @@ header.header
                 a(href="#") Sign up
             li.header__nav-item
                 a(href="#") Sign in
+    h1.header__title Find yourself outside.
+    p.header__subtitle Book unique camping experiences on over 300,000 campsites, cabins, RV parks, public parks and more.
+    a.header__main-link Discover
