--- a/src/pug/layouts/main.pug
+++ b/src/pug/layouts/main.pug
@@ -8,15 +8,17 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        link(rel="stylesheet", href="https://necolas.github.io/normalize.css/8.0.1/normalize.css")
         link(rel="stylesheet", href="css/main.css")
-        link( href="https://fonts.googleapis.com/css?family=Exo+2:900|Montserrat:400,400i,500,700|Playfair+Display&display=swap&subset=cyrillic" rel="stylesheet")
         title Camping
     body
-        include ./../sections/header.pug
-        services
-        destinations
-        subscribe
-        footer
+        .wrapper
+            include ./../sections/header.pug
+            services
+            destinations
+            subscribe
+            footer
 
         
-        script(src="js/main.js")
+        
+        
