--- a/src/pug/layouts/main.pug
+++ b/src/pug/layouts/main.pug
@@ -10,14 +10,14 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         link(rel="stylesheet", href="https://necolas.github.io/normalize.css/8.0.1/normalize.css")
         link(rel="stylesheet", href="css/main.css")
-        title Camping
+        link(href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet")
+        title White Square
     body
         .wrapper
-            include ./../sections/header.pug
-            services
-            destinations
-            subscribe
-            footer
+            main.main
+                img.main__img(src="./../../img/Logo.png", alt="logo")
+                h2.main__title LOREM IPSUM DOLOR SIT AMET; CONSECTETUR ADIPISCING ELIT.
+        
 
         
         
