--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,24 +1,29 @@
 * {
-    margin: 0;
-    padding: 0;
+    font-family: 'Oxygen', sans-serif;
 }
 
-.wrapper {
-    width: 1920px;
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
+    width: 1260px;
+    height: 886px;
+    background-image:url(./../img/Background.png);
+    background-repeat: no-repeat;
+    
 }
 
+.main__img {
+    margin-top: 66px;
+}
 
-//Bloks
-@import "./blocks/header"
+.main__title {
+    display: block;
+    margin-top: 83px;
+    width: 623px;
+    font-size: 39px;
+    color: white;
+}
 
-
-
-
-
-
-
-//font-family: 'Exo 2', sans-serif;
-//font-family: 'Montserrat', sans-serif;
-//font-family: 'Playfair Display', serif;
 
